# detect-desktop-environment

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  clippy.toml
.github/workflows/: check-rs.yml
src/: lib.rs  main.rs
