[package]
name = "detect-desktop-environment"
version = "1.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Autodetect the desktop environment"
documentation = "https://docs.rs/detect-desktop-environment/latest/detect_desktop_environment/"
homepage = "https://github.com/demurgos/detect-desktop-environment"
repository = "https://github.com/demurgos/detect-desktop-environment"
readme = "./README.md"
keywords = ["desktop-environment", "detect", "env"]
categories = ["gui", "os"]
license = "MIT"
edition = "2021"
exclude = ["thumbnails"]
# Rust support policy:
# - The 8 last stable versions are supported (1 year)
# - Other versions are supported on a best-effort basis
# - There are no dependencies yet. If dependencies are ever added they either
#   have the same or stronger policy, or they should be controlled by opt-in features.
# - Bumping the `rust-version` is a semver-minor change.
rust-version = "1.56.1"

[lib]
name = "detect_desktop_environment"
path = "src/lib.rs"

[[bin]]
name = "detect-desktop-environment"
path = "src/main.rs"
